# image-classif

./: LICENSE  README.md  pyproject.toml
src/image_classif/: __init__.py  __main__.py  settings.py
