[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "image_classif"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
image-classif = "image_classif.__main__:main"

[tool.kedro]
package_name = "image_classif"
project_name = "image-classif"
kedro_init_version = "0.19.1"
tools = "[]"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "image_classif.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
